# Project-01-Task-Management-API

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: __init__.py  demo.py  main.py
app/core/: config.py  database.py
app/models/: __init__.py  task.py
app/routers/: tasks.py
app/services/: skill_service.py  task_service.py
app/skills/: __init__.py  daily_status_summary.py  task_prioritizer.py
app/skills/reused/: __init__.py  fcr_autofill.py  incident_update.py  runbook_generator.py
tests/: conftest.py  test_demo_flow.py  test_skills_reused.py  test_tasks_crud.py
